version/0.20/_sources/api/solver/_autosummary/settings/display_3.rst.txt
:orphan:

.. _display_3:

display
=======

.. autoclass:: ansys.fluent.core.solver.settings_241.display_3.display
    :show-inheritance:

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`solution_animations_child <solution_animations_child>`       'child_object_type' of solution_animations.

:ref:`point_surface_child <point_surface_child>`                         'child_object_type' of point_surface.

:ref:`line_surface_child <line_surface_child>`                            'child_object_type' of line_surface.

:ref:`rake_surface_child <rake_surface_child>`                            'child_object_type' of rake_surface.

:ref:`plane_surface_child <plane_surface_child>`                         'child_object_type' of plane_surface.

:ref:`iso_surface_child <iso_surface_child>`                               'child_object_type' of iso_surface.

:ref:`iso_clip_child <iso_clip_child>`                                        'child_object_type' of iso_clip.

:ref:`zone_surface_child <zone_surface_child>`                            'child_object_type' of zone_surface.

:ref:`partition_surface_child <partition_surface_child>`             'child_object_type' of partition_surface.

:ref:`transform_surface_child <transform_surface_child>`             'child_object_type' of transform_surface.

:ref:`imprint_surface_child <imprint_surface_child>`                   'child_object_type' of imprint_surface.

:ref:`plane_slice_child <plane_slice_child>`                               'child_object_type' of plane_slice.

:ref:`sphere_slice_child <sphere_slice_child>`                            'child_object_type' of sphere_slice.

:ref:`quadric_surface_child <quadric_surface_child>`                   'child_object_type' of quadric_surface.

:ref:`surface_cells_child <surface_cells_child>`                         'child_object_type' of surface_cells.

:ref:`mesh_child <mesh_child_1>`                                                  'child_object_type' of mesh.

:ref:`contour_child <contour_child>`                                           'child_object_type' of contour.

:ref:`vector_child <vector_child>`                                              'child_object_type' of vector.

:ref:`pathline_child <pathline_child>`                                        'child_object_type' of pathline.

:ref:`particle_track_child <particle_track_child>`                      'child_object_type' of particle_track.

:ref:`lic_child <lic_child>`                                                       'child_object_type' of lic.

:ref:`olic_child <olic_child>`                                                    'child_object_type' of olic.

:ref:`volumes_child <volumes_child_1>`                                         'child_object_type' of volumes.

:ref:`xy_plot_child <xy_plot_child>`                                           'child_object_type' of xy_plot.

:ref:`cumulative_plot_child <cumulative_plot_child>`                   'child_object_type' of cumulative_plot.

:ref:`scene_child <scene_child>`                                                 'child_object_type' of scene.

============================================================   ===============================================

